@startuml class
package Model{
  package Diary{
    '日記を保持するクラス
    class Diary{
      diaryEntries: Map<day,DiaryEntry>
      settings: Settings
      currentDay: number
      createNewEntry(): number
      getLastDay(): number
      getEntry(day: number): DiaryEntry
      getSettings(): Settings\n\t直接アクセスなのでこの戻り値を編集すると本体も編集される
      deleteEntry(day: number): boolean
    }
    '日記のエントリを作成する関数
    class DiaryEntryFactory{
      constructor(source: DiaryEntryFactoryDiaryEntry, settings: Settings)
      constructor(day: number, title: string, content: string, previous?: number,next?: number)
      create(): DiaryEntry
    }
    Diary ..> DiaryEntryFactory
    DiaryEntryFactory ..> DiaryEntry
    '日記のエントリを保持するクラス
    class DiaryEntry{
      constructor(day: number, title: string, content: string, previous?: number, next?: number)
      day: number
      title: string
      content: string
      previous: number | undefined
      next: number | undefined
      getDay(): number
      setTitle(val: string): void
      getTitle(): string
      setContent(val: string): void
      getContent(): string
      isEdited(settings: DiarySettings): boolean
    }
    ' 日記の設定を保持するクラス
    class DiarySettings{
      _storageKey: string
      _version: number
      diaryName: string
      dayInterval: number
      dayModifier: DayModifier
      constructor(dayModifier: DayModifier, diaryName: string, dayInterval: number, storageKey: string, version: number)
      setDiaryName(string): void
      getDiaryName(): string
      updateDayInterval(number): void
      getDayInterval(): number
      setModifier(val: string): void
      getModifier():string
      updateModifierUnit(val: string, index: number): void
      getModifierUnit(index: number): string
      updateCycleLength(val: number): void
      getCycleLength(): number
      setDayModifierCycle(cycleLength: number): void
      getDayModifierCycle(): number
      getNextDay(day: number): number
      getModifierDay(day: number): string
    }
    Diary "1" o-- DiaryEntry
    Diary "1" o-- "1" DiarySettings
    DiarySettings "1" *-- "1" DayModifier
    class DayModifier{
      constructor(modifier: string, cycleLength: number,...unit: string)
      setModifier(val: string): void
      getModifier(): string
      updateCycleLength(val: number): void
      getCycleLength(): number
      getUnit(index: number): string
      updateUnit(val: string, index: number): void
      modifyDay(naturalDay: number): string
    }
  }
  package Storage {
    class DiaryService{
      constructor(storage; IStorageService)
      getDiary(key: string): Diary
      deleteDiary(key: string): void
      addDiary(diary: Diary):void
    }
    '日記の名前とユニークな日記のキーを対応させストレージに保存するクラス。
    'このクラスはローカルストレージに保存されているデータが正常であるかの判断は行わない。
    class DiaryNameManager{
      constructor(diaryService: DiaryService, storage: IStorageService)
      length: number
      collectDiaryNames(): Array<string>
      updateDiaryName(key: string, name: string): boolean
      removeDiaryName(key: string): void :保存する際にO(n)の処理が挟まるため呼び出しに注意。
      hasDiaryName(name: string): boolean
    }
    class CurrentDiaryManager{
      constructor(storage: IStorageService)
      currentDiaryKey: string
      getCurrentDiaryKey(): string
      setCurrentDiaryKey(key: string): void
    }
    '受け取った文字列をDiaryに変換してストレージに保存する。
    'カレントの操作は行わない。
    class DiaryImport{
      constructor(storage: DiaryService, diarySerializer: DiarySerializer)
      import(val: string): string : keyを返却する
    }
    'KeyからDiaryを選択し、文字列に変換して返却する 
    class DiaryExport{
      constructor(storage: DiaryService, diarySerializer: DiarySerializer)
      export(key: string): string : Diaryを文字列化して返却する
    }
    class DiarySave{
      constructor(storage: DiaryService, diarySerializer: DiarySerializer)
      save(diary: IDiary): void
    }
    '受け取ったKeyからストレージのデータを読み取り、IDiaryに変換して返却する。
    'カレントの操作は行わない。
    class DiaryLoad{
      constructor(storage: DiaryService, diaryFactory: DiaryFactory)
      load(key: string): void
    }
    class DiaryFactory{
      constructor(uniqueDiaryNameGenerator: UniqueDiaryNameGenerator)
      createDiary(): string : Keyを返却する 
      createDiary(diary: Diary): string : Settingsをコピーして新しいDiaryを作成する
    }
    class UniqueDiaryNameGenerator{
      constructor(DiaryNameManager: DiaryNameManager)
      generate(): string
    }
    class IStorageService{
      length: number
      getItem(key: string): string | null
      setItem(key: string, value: string): void
      removeItem(key: string): void
    }
    class DiarySerializer{
      compressDiary(diary: Diary): string
      decompressDiary(val: string): Diary
    }
    CurrentDiaryManager ..> IStorageService
    DiaryImport ..> DiaryFactory
    DiaryImport ..> DiaryService
    DiaryExport ..> DiarySerializer
    DiaryExport ..> DiaryService
    DiarySave ..> DiarySerializer
    DiarySave ..> IStorageService
    DiaryLoad ..> DiaryFactory
    DiaryLoad ..> DiaryService
    DiaryNameManager ..> DiaryService
    DiaryNameManager ..> IStorageService
    DiaryFactory ..> UniqueDiaryNameGenerator
    UniqueDiaryNameGenerator ..> DiaryNameManager
  }
  DiaryService o-- Diary.Diary
  DiaryService --> Diary.DiarySettings
}
package Control{
  package ControlDiary{
    class CurrentDiaryAccessor{
      constructor(currentDiaryManager: CurrentDiaryManager, diaryService: DiaryService)
      getCurrentDiary(): Diary
      setCurrentDiary(key:string): void
    }
    class CreateDiary{
      constructor(diaryAccessor: CurrentDiaryAccessor, diaryFactory:DiaryFactory)
      create(): void
    }
    class DeleteDiary {
      constructor(diaryAccessor: CurrentDiaryAccessor)
      delete(key: string): void;
    }
    ' 日記のインポートボタンを押したときの挙動を定義するクラス
    class DiaryImporter{
      constructor(diaryImport:DiaryImport, diaryAccessor: CurrentDiaryAccessor)
      importText(val: string): string : keyを返却する
      importFile(file: File): string : keyを返却する
    }
    ' 日記のエクスポートボタンを押したときの挙動を定義するクラス
    class DiaryExporter{
      constructor(diaryExport:DiaryExport)
      exportText(key: string): string : Diaryを文字列化して返却する
      exportFile(key: string): File : Diaryをファイル化して返却する
    }
    ' 日記のセーブボタンを押したときの挙動を定義するクラス
    class DiarySaveHandler{
      constructor(diarySave:DiarySave, diaryAccessor: CurrentDiaryAccessor)
      save(): void
    }
    ' 日記のロードボタンを押したときの挙動を定義するクラス
    class DiaryLoadHandler{
      constructor(diaryLoad: DiaryLoad, diaryAccessor: CurrentDiaryAccessor)
      load(key: string): void
    }
    
    CurrentDiaryAccessor ..> CurrentDiaryManager
    CurrentDiaryAccessor ..> DiaryService
    CreateDiary ..> CurrentDiaryAccessor
    CreateDiary ..> DiaryFactory
    DeleteDiary ..> CurrentDiaryAccessor
    DiaryImporter ..> DiaryImport
    DiaryExporter ..> DiaryExport
    DiarySaveHandler ..> DiarySave
    DiaryLoadHandler ..> DiaryLoad
  }
  package ControlDiaryEntry{
    class CurrentDiaryEntryAccessor{
      constructor(diaryAccessor: CurrentDiaryAccessor)
      getCurrentDiaryEntry(): DiaryEntry
      setCurrentDiaryEntry(day: number): void
    }
    class ChangeCurrentDiaryEntry{
      constructor(diaryEntryAccessor: CurrentDiaryEntryAccessor diaryEntryFactory: DiaryEntryFactory)
      moveByDate(date: number): void;
      moveToNext(): void;
      moveToPrevious(): void;
    }
    class DeleteDiaryEntry {
      constructor(diaryAccessor: CurrentDiaryAccessor)
      delete(day: number): void;
    }
    class EditDiarySettings{
      constructor(diaryAccessor: CurrentDiaryAccessor)
      editDiaryName(name:string): void
      editDayInterval(interval:number): void
      editDayModifier(modifier:string): void
      editDayModifierCycle(cycle:number,cycleModifier:string): void
    }
    class EditDiaryEntry{
      constructor(diaryEntryAccessor: CurrentDiaryEntryAccessor)
      editTitle(title:string): void
      editContent(content:string): void
      clear(): void;
    }
    CurrentDiaryEntryAccessor..> CurrentDiaryAccessor
    ChangeCurrentDiaryEntry ..> CurrentDiaryEntryAccessor
    ChangeCurrentDiaryEntry ..> DiaryEntryFactory
    DeleteDiaryEntry ..> CurrentDiaryAccessor
    EditDiarySettings ..> CurrentDiaryAccessor
    EditDiarySettings -- DiarySettings
    EditDiaryEntry ..> CurrentDiaryEntryAccessor
    EditDiaryEntry -- DiaryEntry
  }

}
@enduml